[StdLib Man] Polish "Restricted Actions"
Cleanup Ch.18 on "Restricted Actions" and begin updating
its contents to mirror the new library changes. The chapter
is not yet completed, but at least all its info is now
correct. Still need to recycle some of the original text
and add examples.

Carry out some document cleaning-up and annotating TODOs:

* Adjust all header comment-frames to 78 columns to prevent line
  wrapping in the editor.
* Convert all links to repository Issues to attribute definitions
  in `StdLibManA_attributes.adoc` so they can be reused anywhere.
* Add "Section Status" sidebars to some sections that need to be
  updated to mirror new library changes.
* Add "editor notes" admonitions here and there, as reminders of
  pending fixes and/or text changes.

--- a/extras_src/manual/StdLibMan-inc_attributes.adoc
+++ b/extras_src/manual/StdLibMan-inc_attributes.adoc
@@ -68,4 +68,18 @@ alternative links on the GH Pages website, etc.).
 :lib_verbs_restrictions: pass:q,a[link:{StdLibDir}/lib_verbs_restrictions.i[`lib_verbs_restrictions.i`^,title="View library source file"]]
 :COPYING: pass:q,a[link:{StdLibDir}/COPYING[`COPYING`^,title="View library license file"]]
 
+// Links to repository Issues
+// ==========================
+:Issue86: https://github.com/AnssiR66/AlanStdLib/issues/86[Issue #86^, title="Issue #86 — Examples Sources Letter Casing"]
+:Issue113: https://github.com/AnssiR66/AlanStdLib/issues/113[Issue #113^, title="Issue #113 — Actions-Restrictions Not Working As Expected"]
+:Issue114: https://github.com/AnssiR66/AlanStdLib/issues/114[Issue #114^, title="Issue #114 — New 'Library Attributes' Part"]
+:Issue115: https://github.com/AnssiR66/AlanStdLib/issues/115[Issue #115^, title="Issue #115 — Document Overriding Verbs on 'my_game'"]
+:Issue118: https://github.com/AnssiR66/AlanStdLib/issues/118[Issue #118^, title="Issue #118 — Potential Issues With NPCs Following Hero"]
+
+
+////
+:IssueXYZ: https://github.com/AnssiR66/AlanStdLib/issues/XYZ[Issue #XYZ^, title="Issue #XYZ — ZZZZZZZZZZZZZZZZ"]
+////
+
+
 // EOF //
