--- a/extras_src/manual/StdLibManA.adoc
+++ b/extras_src/manual/StdLibManA.adoc
@@ -1,10 +1,12 @@
-// *****************************************************************************
-// *                                                                           *
-// *                   ALAN Standard Library User's Manual                     *
-// *                                                                           *
-// *                              PART Appendices                              *
-// *                                                                           *
-// *****************************************************************************
+////
+******************************************************************************
+*                                                                            *
+*                    ALAN Standard Library User's Manual                     *
+*                                                                            *
+*                               PART Appendices                              *
+*                                                                            *
+******************************************************************************
+////
 
 
 [[part.appendices]]
