--- a/extras_src/manual/StdLibMan3_03.adoc
+++ b/extras_src/manual/StdLibMan3_03.adoc
@@ -1,11 +1,11 @@
 ////
-********************************************************************************
-*                                                                              *
-*                     ALAN Standard Library User's Manual                      *
-*                                                                              *
-*                        PART Library Classes » Actors                         *
-*                                                                              *
-********************************************************************************
+******************************************************************************
+*                                                                            *
+*                    ALAN Standard Library User's Manual                     *
+*                                                                            *
+*                       PART Library Classes » Actors                        *
+*                                                                            *
+******************************************************************************
 ////
 
 
@@ -88,7 +88,7 @@ Pre-defined actor attributes in the library:
 
 // @EXTERNALIZE STDLIB CODE: pre-defined actor attributes
 [source,alan]
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 IS NOT inanimate.
 IS NOT following.
 IS NOT sitting.
@@ -96,7 +96,7 @@ IS NOT lying_down.
 IS NOT named.
 IS wearing {clothing}.
 IS NOT compliant.
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 
 
 They are described in more detail below:
@@ -107,9 +107,9 @@ They are described in more detail below:
 
 // @INTERN CODE
 [source,alan]
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 IS NOT inanimate.
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 
 Verbs `push`, `push_with`, `rub`, `scratch`, `search`, `touch` and `touch_with` won't have successful outcomes with animate objects (= ACTORS).
 To ensure this, the (NOT) inanimate attribute is used.
@@ -119,25 +119,32 @@ All things other than ACTORs are inanimate.
 [[sec.following]]
 === following
 
+.EDITORS' NOTE
+[CAUTION]
+=====================================
+*TBD!* Need to mention problem of the following SCRIPT terminating if a custom SCRIPT is executed on an NPC (see {Issue118}).
+=====================================
+
+
 // @INTERN CODE
 [source,alan]
---------------------------------------------------------------------------------
+-----------------
 IS NOT following.
---------------------------------------------------------------------------------
+-----------------
 
 By default, NPCs won't follow the hero around the game map.
 To make any ACTOR follow the hero, give that actor the following attribute, for example:
 
 // @EXTERNALIZE CODE: bear
 [source,alan]
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 THE bear ISA ACTOR
   VERB feed
     DOES "You give the steak to the bear. It seems to like it."
          MAKE bear following.
   END VERB.
 END THE bob.
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 
 
 
@@ -145,20 +152,20 @@ If you wish to have an ACTOR follow the hero right from the start of the game, y
 
 // @EXTERNALIZE CODE: servant
 [source,alan]
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 THE servant ISA MALE
   IS following.
 END THE.
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 
 To stop an ACTOR from following the hero, just make the ACTOR NOT following.
 
 // @EXTERNALIZE CODE: bear + servant
 [source,alan]
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 MAKE bear NOT following.
 MAKE servant NOT following.
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 
 
 // @ADDED:
@@ -167,10 +174,10 @@ MAKE servant NOT following.
 
 // @INTERN CODE
 [source,alan]
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 IS NOT sitting.
 IS NOT lying_down.
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 
 
 These two attributes exist to allow the author to make the hero, or another ACTOR, sitting or lying down.
@@ -178,7 +185,7 @@ The outcomes for the commands [.play]#&gt; _sit_# and [.play]#&gt; _lie down_# a
 
 // @EXTERNALIZE CODE: sit + lie_down
 [source,alan]
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 THE my_game ISA DEFINITION_BLOCK
   VERB sit
     DOES ONLY "You sit down on the floor."
@@ -190,7 +197,7 @@ THE my_game ISA DEFINITION_BLOCK
               MAKE hero lying_down.
   END VERB.
 END THE.
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 
 // @FIXME: Add XRef:
 Similarly, it is possible for the hero to sit or lie down on a SUPPORTER object ([.play]#&gt; _lie on bed_#, [.play]#&gt; _sit on chair_#), but the action is not successful by default and must be manually implemented by the author.
@@ -203,9 +210,9 @@ Refer to: Objects => Supporters.
 
 // @INTERN CODE
 [source,alan]
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 IS NOT named.
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 
 If you don't need an article in front of an ACTOR name (for example 'Jim', as opposed to for example 'a/the man'), declare the instance as named.
 By default, all ACTORs are NOT named.
@@ -213,18 +220,18 @@ By default, all ACTORs are NOT named.
 
 // @EXTERNALIZE CODE: jim
 [source,alan]
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 THE jim ISA ACTOR AT room1
   IS named.
 END THE.
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 
 If you have in your game an ACTOR that starts off as unnamed (such as 'a man'), and the player learns his name later on (say, 'Jim'), you should define the ACTOR in for example the following way to make the player able to refer to him with both 'man' and 'Jim':
 
 
 // @EXTERNALIZE CODE: jim
 [source,alan]
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 THE jim ISA PERSON AT room1
   NAME man
   NAME Jim
@@ -245,7 +252,7 @@ THE jim ISA PERSON AT room1
       END IF.
   END VERB.
 END THE.
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 
 The library takes care of the indefinite/definite article showing before man when the actor (here Jim) is not named yet.
 
@@ -256,9 +263,9 @@ The library takes care of the indefinite/definite article showing before man whe
 
 // @INTERN CODE
 [source,alan]
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 IS NOT compliant.
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 
 
 An ACTOR only gives something to the hero if it is in a compliant mood.
@@ -298,11 +305,11 @@ If we declare:
 
 // @EXTERNALIZE CODE: compliant NPCs
 [source,alan]
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 THE man ISA MALE AT room1
   IS compliant.
 END THE.
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 
 then, the outcome for taking and implicit taking would be successful:
 
@@ -330,7 +337,7 @@ To disable even the verb `ask_for`, so that the NPC won't give you something eve
 
 // @EXTERNALIZE CODE: non-compliant NPCs
 [source,alan]
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 THE man ISA MALE AT room1
   ...
   VERB ask_for
@@ -338,7 +345,7 @@ THE man ISA MALE AT room1
       DOES ONLY "He doesn't seem to be willing to fulfill your wish."
   END VERB.
 END THE man.
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 
 
 [[sec.hero]]
@@ -360,7 +367,7 @@ However, if you need to define attributes or verb responses for the hero, or if 
 
 // @EXTERNALIZE CODE: hero: self-directed actions
 [source,alan]
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 THE hero ISA ACTOR
   HAS strength 20.
   IS NOT hungry.
@@ -370,7 +377,7 @@ THE hero ISA ACTOR
     DOES ONLY "You're John Smith, proud of your unusual name."
   END VERB.
 END THE hero.
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 
 
 The command [.play]#&gt; _x me_# would then produce
@@ -396,7 +403,7 @@ You're wearing an old jacket.
 If you wish to have the pieces of clothing worn by the hero listed at other verbs, like for example [.play]#&gt; _x me_#, you should use the formulation LIST worn.:
 
 [source,alan]
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 THE hero ISA ACTOR
   ...
   VERB examine
@@ -404,7 +411,7 @@ THE hero ISA ACTOR
               LIST worn.
   END VERB.
 END THE hero.
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 
 
 which will result in
@@ -420,10 +427,10 @@ You are wearing an old jacket.
 If you wish to define any object to be in the hero's inventory, define the object to be "IN hero":
 
 [source,alan]
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 THE notebook ISA OBJECT IN hero.
 END THE notebook.
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 
 
 Pieces of clothing, in addition to the above, need to defined as follows:
@@ -431,13 +438,13 @@ Pieces of clothing, in addition to the above, need to defined as follows:
 // @FIXME: XRef to page (in code):
 
 [source,alan]
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 THE old_jacket ISA CLOTHING
   NAME old jacket
   MENTIONED "old jacket"
   IS topcover 64. -- (see further p. 39)
 END THE.
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 
 The coding LIST hero will list what the hero is carrying, LIST worn will list what the hero is wearing.
 The hero is by default a container actor (so that it can pick up and carry things) and you never need to declare the hero a container separately.
@@ -450,19 +457,19 @@ The hero is by default a container actor (so that it can pick up and carry thing
 When the player types [.play]#&gt; _examine [actor]_#, the response will be the default [.play]#You notice nothing unusual about [the actor].#, unless some other description is defined for the ACTOR in the DOES ONLY part of the actor instance:
 
 [source,alan]
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 THE boy ISA ACTOR AT STREET
   VERB examine
     DOES ONLY "A boy about twelve years old."
   END VERB.
 END THE boy.
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 
 
 If you wish to have an ACTOR's possessions and worn clothing listed after examine, you should add `LIST [actor].` manually to the appropriate verb (typically examine) of the ACTOR instance:
 
 [source,alan]
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 THE boy ISA PERSON AT street
   IS wearing {baseball_cap}.
 
@@ -477,7 +484,7 @@ END THE.
 THE baseball_cap ISA CLOTHING IN boy
   NAME baseball cap
 END THE.
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 
 
 will result in:
@@ -504,7 +511,7 @@ You can for example answer a phone or a door, or you can answer a riddle written
 Program an NPC to reply to various topics the hero might ask them, in the following way:
 
 [source,alan]
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 THE man ISA PERSON AT street
   ...
   VERB ask_about
@@ -527,7 +534,7 @@ THE man ISA PERSON AT street
         END IF.
   END VERB.
 END THE.
---------------------------------------------------------------------------------
+------------------------------------------------------------------------------
 
 
 // EOF //
