--- a/extras_src/manual/StdLibMan4.adoc
+++ b/extras_src/manual/StdLibMan4.adoc
@@ -1,10 +1,12 @@
-// *****************************************************************************
-// *                                                                           *
-// *                   ALAN Standard Library User's Manual                     *
-// *                                                                           *
-// *                          PART IV — Library Verbs                          *
-// *                                                                           *
-// *****************************************************************************
+////
+******************************************************************************
+*                                                                            *
+*                     ALAN Standard Library User's Manual                    *
+*                                                                            *
+*                           PART IV — Library Verbs                          *
+*                                                                            *
+******************************************************************************
+////
 
 
 [[part.library-verbs]]
