--- a/extras_src/manual/StdLibMan5.adoc
+++ b/extras_src/manual/StdLibMan5.adoc
@@ -1,10 +1,12 @@
-// *****************************************************************************
-// *                                                                           *
-// *                   ALAN Standard Library User's Manual                     *
-// *                                                                           *
-// *                         PART V — Library Messages                         *
-// *                                                                           *
-// *****************************************************************************
+////
+******************************************************************************
+*                                                                            *
+*                    ALAN Standard Library User's Manual                     *
+*                                                                            *
+*                          PART V — Library Messages                         *
+*                                                                            *
+******************************************************************************
+////
 
 
 [[part.library-messages]]
